--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@
 }
 input[type="text"], textarea {
   border: none;
-  min-height: 3rem;
+  min-height: 2rem;
   outline: none;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
@@ -129,9 +129,18 @@ input:focus-within, textarea:focus-within {
   cursor: default;
 }
 .all-sliders {
-  gap: 1rem;
+  gap: 0.5rem;
   padding: 0.4rem 0.8rem;
 }
 #profile-text {
   height: 300px;
+}
+.fit-content {
+  width: fit-content;
+  min-width: 1rem;
+}
+.seperator {
+  width: 4px;
+  margin: 0 auto;
+  background-color: rgba(128, 128, 128, 0.3);
 }
