--- a/src/layout.css
+++ b/src/layout.css
@@ -1,13 +1,15 @@
 #root {
-  font-size: 14px;
+  font-size: 11pt;
   display: grid;
-  width: 90ch;
+  width: 595pt;
+  height: 842pt;
+  padding: 25pt;
   margin: 0 auto;
-  grid-template: repeat(10, 120px) / 32ch 2ch 58ch;
+  grid-template: repeat(12, 65.8pt) / 200pt 8pt 338pt;
 }
 .seperator {
   grid-column: 2/3;
-  grid-row: 2/-1;
+  grid-row: 2/-2;
 }
 #header {
   grid-column: 1/-1;
@@ -15,25 +17,25 @@
 }
 #profile {
   grid-column: 1/2;
-  grid-row: 2/4;
+  grid-row: 2/5;
 }
 #skills {
   grid-column: 1/2;
-  grid-row: 4/9;
+  grid-row: 5/9;
 }
 #achievements {
   grid-column: 1/2;
-  grid-row: 9/11;
+  grid-row: 9/12;
 }
 #education {
   grid-column: 3/-1;
-  grid-row: 2/5;
+  grid-row: 2/7;
 }
 #experience {
   grid-column: 3/-1;
-  grid-row: 5/8;
+  grid-row: 7/12;
 }
 #hobbies {
-  grid-column: 3/-1;
-  grid-row: 9/11;
+  grid-column: 1/-1;
+  grid-row: 12/13;
 }
